force-app/main/default/objects/nd_jv_entry__c/nd_jv_entry__c.object-meta.xml
<CustomObject>
    <label>jv_entry</label>
    <nameField>
        <label>jv_entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>jv_entry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>