force-app/main/default/objects/nd_jv_entry__c/fields/amount_sent_to_GL__c.field-meta.xml
<CustomField>
    <fullName>amount_sent_to_GL__c</fullName>
    <label>amount sent to GL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>