force-app/main/default/objects/nd_jv_entry__c/fields/G_L_Account_c__c.field-meta.xml
<CustomField>
    <fullName>G_L_Account_c__c</fullName>
    <label>G_L_Account__c</label>
    <length>80</length>
    <type>Text</type>
</CustomField>