force-app/main/default/objects/nd_jv_entry__c/fields/jv_status__c.field-meta.xml
<CustomField>
    <fullName>jv_status__c</fullName>
    <label>jv status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>processed</fullName>
            </value>
            <value>
                <fullName>written to file</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>