force-app/main/default/objects/nd_jv_entry__c/fields/opportunity_name__c.field-meta.xml
<CustomField>
    <fullName>opportunity_name__c</fullName>
    <label>opportunity name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>